css/profile.css
@font-face {
    font-family: iransans;
    src: url("../assets/fonts/iran\ sans/iransans_medium.woff");
}

:root {
    --input-label-color: rgb(14, 186, 197);
    --background-color: rgb(232, 233, 237);
    --menu-blue: rgb(14, 186, 197);
    --menu-yello: rgb(255, 200, 10);
    --menu-bright-gray: rgb(237, 237, 237);
    --menu-dark-gray: rgb(225, 225, 225);
    --menu-black: rgb(0, 0, 0);
    --menu-white: rgb(255, 255, 255);
    --footer-gray: rgb(114, 120, 125);
    --footer-black: rgb(49, 52, 54);
    --tab-dark-gray: rgb(232, 233, 237);
    --tab-light-gray: rgb(218, 216, 216);
    --tab-darkest-gray: rgb(161, 165, 169);
    --tab-black: rgb(0, 0, 0);
}

body {
    background-color: lightsteelblue;
    direction: rtl;
    margin: 0;
    font-family: iransans;
}

.main-div {
    width: 1280px;
    margin: auto;
    min-height: 100vh;
    flex-direction: column;
    display: flex;
    flex-wrap: nowrap;
    justify-content: space-between;
    background-color: gainsboro;
}


/* menu */

.navbar {
    /* overflow: hidden; */
    height: 65px;
    background-color: var(--menu-white);
    text-align: center;
    z-index: 0;
    position: relative;
    top: 0px;
}

.navbar p {
    float: right;
    font-size: 20px;
    padding-right: 25px;
    color: var(--menu-blue);
}

.navbar a {
    float: right;
    font-size: 14px;
    color: inherit;
    padding-top: 22px;
    padding-right: 25px;
    text-decoration: none;
}

.dropdown {
    overflow: hidden;
}

.dropdown .dropdownbtn {
    font-size: 14px;
    background-color: var(--menu-white);
    color: var(--menu-black);
    border-radius: 24px;
    border-style: solid;
    border-color: var(--menu-yello);
    outline: none;
    margin-top: 10px;
    margin-left: 20px;
    margin-right: 20px;
    padding: 5px 21px;
    font-family: inherit;
    position: absolute;
    top: 0px;
    left: 0px;
    z-index: 2;
}

.dropdown-content {
    display: none;
    background-color: var(--menu-dark-gray);
    padding-top: 30px;
    padding-bottom: 15px;
    position: absolute;
    top: 18px;
    left: 21px;
    border-radius: 15px;
    width: 124px;
    z-index: 1;
}

.dropdown-content a {
    float: none;
    display: block;
    background-color: var(--menu-dark-gray);
    color: var(--menu-black);
    text-decoration: none;
    padding: 5px 5px;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.navbar a:hover {
    color: var(--menu-blue);
}

.dropdown:hover .dropdownbtn {
    background-color: var(--menu-yello);
}

.dropdown-content a:hover {
    background-color: var(--menu-bright-gray);
    color: var(--menu-black);
}


/* menu */

.profile-div {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    background-color: gainsboro;
}

.visibale {
    display: block !important;
}

.invisible {
    display: none !important;
}


/* credit info */

#profile-section {
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    flex-wrap: nowrap;
}

#reciepts-section {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: nowrap;
    flex-direction: column;
    width: 80%;
}

.flex-row {
    width: 100%;
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
    flex-wrap: nowrap;
}

.strech-row {
    display: flex;
    align-items: stretch;
    flex-direction: column;
    justify-content: center;
    flex-wrap: nowrap;
}

.welcome {
    font-family: iransans;
    font-size: 22px;
    padding: 0px 5px;
}

#your-credit {
    font-family: iransans;
    font-size: 14px;
    padding: 5px 5px;
}

.credit-info {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    align-content: center;
    align-items: stretch;
    margin-bottom: 30px;
}

#increase-credit {
    font-size: 13px;
    color: rgb(0, 0, 0);
    background-color: rgb(255, 200, 10);
    border-radius: 24px;
    border-style: none;
    outline: none;
    padding: 1px 20px;
    font-family: iransans;
    margin-right: 10px;
}


/* credit info */


/* tabs  */

.tab-container {
    width: 250px;
    height: 40px;
    border-style: solid;
    border-color: var(--tab-dark-gray);
    border-radius: 24px;
    text-align: center;
    margin-bottom: 10px;
}

.tab {
    font-family: iransans;
    font-size: 14px;
}

.tab a {
    text-decoration: none;
    display: inline-block;
    padding: 6px 40px;
}

.right-tab {
    width: 50%;
    height: 100%;
    float: right;
    border-top-right-radius: 24px;
    border-bottom-right-radius: 24px;
}

.left-tab {
    width: 50%;
    height: 100%;
    float: left;
    border-top-left-radius: 24px;
    border-bottom-left-radius: 24px;
}

.selected-tab {
    background-color: var(--tab-dark-gray);
    color: var(--tab-black);
}

.selected-tab a {
    color: var(--tab-black);
}

.un-selected-tab {
    background-color: var(--tab-light-gray);
    color: var(--tab-darkest-gray);
}

.un-selected-tab a {
    color: var(--tab-darkest-gray);
}


/* tabs  */


/* form */

.form-div {
    display: flex;
    flex-direction: column;
    flex-wrap: nowrap;
    align-items: stretch;
    margin-bottom: 30px;
}

.row-one {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    direction: rtl;
    justify-content: flex-start;
}

.row-two {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    direction: rtl;
    justify-content: flex-start;
}

.row-three {
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    direction: rtl;
    align-items: stretch;
}


/* row one */


/* input component */

.input-container {
    direction: rtl;
    display: flex;
    width: 100%;
    height: 100%;
    flex-direction: row;
    flex-wrap: nowrap;
    justify-content: flex-start;
    margin: 5px 10px 5px 10px;
}

.input-label {
    direction: rtl;
    display: flex;
    justify-content: center;
    align-content: center;
    flex-direction: column;
    text-align: center;
    font-family: iransans;
    font-size: 14px;
    flex-grow: 0;
    width: 80px;
    background-color: var(--input-label-color);
    padding: 3px 3px;
    border-radius: 0px 5px 5px 0px;
    color: white;
}

.input-textbox {
    direction: rtl;
    text-align: start;
    font-family: iransans;
    font-size: 13px;
    flex-grow: 1;
    background-color: white;
    padding: 5px 10px 5px 10px;
    border-radius: 5px 0px 0px 5px;
    color: black;
    border: none;
    outline: none;
}

.input-textarea {
    direction: rtl;
    text-align: start;
    font-family: iransans;
    font-size: 13px;
    flex-grow: 1;
    background-color: white;
    padding: 5px 10px 5px 10px;
    border-radius: 5px 0px 0px 5px;
    color: black;
    border: none;
    outline: none;
    resize: none;
}

::placeholder {
    color: lightgrey;
}


/* form */

#edit-profile {
    font-size: 13px;
    color: rgb(0, 0, 0);
    background-color: rgb(255, 200, 10);
    border-radius: 24px;
    border-style: none;
    outline: none;
    padding: 5px 20px;
    font-family: iransans;
    font-size: 18px;
    margin-right: 10px;
}


/* table */

table {
    font-family: iransans;
    justify-content: center;
    align-items: center;
    font-size: 15px;
    border-collapse: collapse;
    width: 100%;
    background-color: rgb(255, 255, 255);
    direction: rtl;
    color: rgb(218, 216, 216);
    padding: 0px 50px;
    border-radius: 5px;
}

th {
    text-align: center;
    padding: 10px 0px;
}

tr {
    border-bottom: 1px solid #dddddd;
    text-align: center;
}

td {
    padding: 10px 0px;
    color: rgb(66, 66, 66);
}


/* table */


/* footer */

.footer {
    bottom: 0;
    max-width: 1280;
    width: 100%;
    clear: both;
    font-size: 14px;
    font-family: iransans;
    background-color: var(--footer-black);
    color: var(--footer-gray);
    text-align: center;
}


/* footer */

